# ml-project

./: .gitignore  pyproject.toml
src/ml_project/: string_utils.py
tests/: test_core.py
