[project]
name = "project-name"
version = "0.1.0"
description = "Short description of the project"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"